--- a/src/App.css
+++ b/src/App.css
@@ -291,7 +291,8 @@ a:hover{
     width: 180px;
 }
 .news-card{
-    min-height: 300px !important;
+    width: 100% !important;
+    margin-block:3% !important;
 }
 .news-image-container{
     display: flex !important;
@@ -301,10 +302,6 @@ a:hover{
 width: 70%;
 }
 
-.news-image-container .img{
-    width:100px;
-    height:100px;
-}
 .news-card p{
     color: black;
     margin: 10px 0px !important;
