rendered crypto description and links

--- a/src/App.css
+++ b/src/App.css
@@ -335,7 +335,7 @@ a:hover{
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-}
+}coin-desc-link
 .show-more{
     margin-top: 0px !important;
 }
